--- a/css/style.css
+++ b/css/style.css
@@ -263,6 +263,11 @@ h2 {
   100% {
     opacity: 1;
     transform: scale(1); } }
+@keyframes login_anim {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
 .card .card-text {
   display: flex;
   align-items: start;
@@ -307,6 +312,9 @@ h2 {
       .card .card-text .tutor_headline .left .price {
         color: #b497cf;
         font-size: 1.3rem; }
+
+.btn {
+  cursor: pointer; }
 
 /********************
 		NAV
@@ -367,20 +375,121 @@ nav {
           margin: 0 5px; }
         nav .container .drop-down .langs li:last-child::after {
           display: none; }
-      nav .container .drop-down .login {
-        margin-left: 30px;
-        display: flex;
-        align-items: center;
-        justify-content: center; }
-        nav .container .drop-down .login img {
-          width: 20px;
-          height: 20px; }
-        nav .container .drop-down .login p {
-          margin-left: 10px;
-          font-size: 0.9rem; }
     nav .container .active {
       height: 40vh;
       padding: 20px 30px; }
+    nav .container .login {
+      position: relative;
+      margin-left: 30px; }
+      nav .container .login .login_icon {
+        cursor: pointer; }
+        nav .container .login .login_icon svg {
+          width: 25px;
+          height: 25px; }
+          nav .container .login .login_icon svg path {
+            transition: 0.4s ease-in-out; }
+        nav .container .login .login_icon:hover svg path {
+          fill: #b497cf; }
+      nav .container .login .login-drop {
+        position: absolute;
+        display: none;
+        width: 300px;
+        right: -18px;
+        top: 30px;
+        z-index: 121;
+        opacity: 0; }
+        nav .container .login .login-drop .login_wrapper {
+          background-color: #ffff;
+          width: 100%;
+          height: 100%;
+          border-radius: 5px;
+          position: relative; }
+          nav .container .login .login-drop .login_wrapper .form_btns {
+            padding: 15px 15px 10px 15px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            flex-direction: row; }
+            nav .container .login .login-drop .login_wrapper .form_btns .form_btn {
+              width: 45%;
+              background-color: transparent;
+              border: none;
+              border-bottom: 2px solid rgba(65, 78, 82, 0.4);
+              font-size: 1rem;
+              color: rgba(65, 78, 82, 0.4);
+              padding-bottom: 4px;
+              cursor: pointer; }
+              nav .container .login .login-drop .login_wrapper .form_btns .form_btn.singUp_btn {
+                text-align: right; }
+              nav .container .login .login-drop .login_wrapper .form_btns .form_btn.login_btn {
+                text-align: left; }
+              nav .container .login .login-drop .login_wrapper .form_btns .form_btn.active_btn {
+                border-bottom: 2px solid #414e52;
+                color: #414e52; }
+          nav .container .login .login-drop .login_wrapper form {
+            display: flex;
+            align-items: flex-start;
+            justify-content: flex-start;
+            flex-wrap: nowrap;
+            flex-direction: column;
+            padding: 15px; }
+            nav .container .login .login-drop .login_wrapper form label {
+              font-size: 0.8rem;
+              color: #414e52; }
+            nav .container .login .login-drop .login_wrapper form input {
+              margin-bottom: 10px;
+              width: 100%;
+              padding: 5px 10px;
+              border: 1px solid #414e52; }
+              nav .container .login .login-drop .login_wrapper form input:focus {
+                outline: 2px solid #fedc40; }
+            nav .container .login .login-drop .login_wrapper form a,
+            nav .container .login .login-drop .login_wrapper form p {
+              margin-bottom: 10px;
+              color: #414e52; }
+            nav .container .login .login-drop .login_wrapper form p {
+              font-size: 0.95rem; }
+              nav .container .login .login-drop .login_wrapper form p a {
+                color: #b497cf; }
+                nav .container .login .login-drop .login_wrapper form p a:hover {
+                  color: #414e52; }
+            nav .container .login .login-drop .login_wrapper form h4 {
+              font-size: 1.2rem;
+              font-size: 300;
+              color: #414e52;
+              margin-bottom: 20px; }
+            nav .container .login .login-drop .login_wrapper form button {
+              margin-bottom: 10px;
+              background: #fedc40;
+              border: none;
+              padding: 5px 20px;
+              color: #414e52;
+              cursor: pointer; }
+            nav .container .login .login-drop .login_wrapper form.login_form {
+              display: none; }
+            nav .container .login .login-drop .login_wrapper form.singUp_form {
+              display: none; }
+            nav .container .login .login-drop .login_wrapper form.forgot_pass {
+              display: none; }
+            nav .container .login .login-drop .login_wrapper form.show_form {
+              display: flex; }
+            nav .container .login .login-drop .login_wrapper form .error_msg {
+              display: none; }
+              nav .container .login .login-drop .login_wrapper form .error_msg.show_msg {
+                display: inline-block; }
+            nav .container .login .login-drop .login_wrapper form .forgot_pass:hover {
+              text-decoration: underline; }
+        nav .container .login .login-drop .arrow_login_wrapper .arrow_login {
+          height: 20px;
+          width: 30px;
+          clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+          background-color: #ffff;
+          margin-left: auto;
+          margin-right: 15px; }
+        nav .container .login .login-drop.show_login {
+          display: block;
+          animation: login_anim 0.5s forwards; }
     nav .container .toggle-bar {
       width: 20px;
       height: 20px;
@@ -464,6 +573,7 @@ header {
         font-family: "Roboto", sans-serif;
         border-radius: 10px;
         border: none;
+        cursor: pointer;
         border-radius: 0px;
         height: 70px;
         border-bottom-right-radius: 8px;
@@ -652,6 +762,7 @@ header {
         font-family: "Roboto", sans-serif;
         border-radius: 10px;
         border: none;
+        cursor: pointer;
         padding: 15px 40px;
         display: inline-block;
         margin-right: 20px;
@@ -740,6 +851,7 @@ header {
             font-family: "Roboto", sans-serif;
             border-radius: 10px;
             border: none;
+            cursor: pointer;
             padding: 15px 40px;
             display: inline-block;
             margin-right: 20px;
@@ -822,6 +934,7 @@ header {
       font-family: "Roboto", sans-serif;
       border-radius: 10px;
       border: none;
+      cursor: pointer;
       padding: 20px 40px;
       text-align: center;
       margin-top: 50px; }
@@ -1104,6 +1217,7 @@ TUTOR VIEW
         font-family: "Roboto", sans-serif;
         border-radius: 10px;
         border: none;
+        cursor: pointer;
         height: 40px;
         width: 150px;
         text-align: center;
@@ -1116,6 +1230,7 @@ TUTOR VIEW
         font-family: "Roboto", sans-serif;
         border-radius: 10px;
         border: none;
+        cursor: pointer;
         height: 40px;
         width: 150px;
         background: #fff;
@@ -1193,6 +1308,7 @@ Becom a tutor
           font-family: "Roboto", sans-serif;
           border-radius: 10px;
           border: none;
+          cursor: pointer;
           padding: 12px 20px;
           width: 100%; }
         .become_tutor_header .wrapper .sign-up form .divider {
@@ -1219,6 +1335,7 @@ Becom a tutor
           font-family: "Roboto", sans-serif;
           border-radius: 10px;
           border: none;
+          cursor: pointer;
           width: 100%;
           padding: 12px 20px;
           margin-bottom: 10px; }
@@ -1403,6 +1520,7 @@ Becom a tutor
           font-family: "Roboto", sans-serif;
           border-radius: 10px;
           border: none;
+          cursor: pointer;
           padding: 15px 30px;
           border-radius: 6px;
           margin-right: 30px;
@@ -1579,6 +1697,7 @@ TUTOR PROFILE PAGE
         font-family: "Roboto", sans-serif;
         border-radius: 10px;
         border: none;
+        cursor: pointer;
         padding: 10px 30px;
         border-radius: 6px; }
 
@@ -1618,6 +1737,7 @@ TUTOR PROFILE PAGE
     font-family: "Roboto", sans-serif;
     border-radius: 10px;
     border: none;
+    cursor: pointer;
     padding: 10px 30px;
     border-radius: 6px; }
 
@@ -2146,6 +2266,7 @@ TUTOR PROFILE PAGE
     font-family: "Roboto", sans-serif;
     border-radius: 10px;
     border: none;
+    cursor: pointer;
     padding: 10px 30px;
     border-radius: 4px; }
 
@@ -2321,6 +2442,7 @@ TUTOR PROFILE PAGE
         font-family: "Roboto", sans-serif;
         border-radius: 10px;
         border: none;
+        cursor: pointer;
         background-color: #fff;
         width: 100%;
         min-width: 150px;
@@ -2437,6 +2559,7 @@ TUTOR PROFILE PAGE
     font-family: "Roboto", sans-serif;
     border-radius: 10px;
     border: none;
+    cursor: pointer;
     padding: 15px 40px;
     border-radius: 4px; }
 
@@ -2458,6 +2581,7 @@ TUTOR PROFILE PAGE
       font-family: "Roboto", sans-serif;
       border-radius: 10px;
       border: none;
+      cursor: pointer;
       padding: 10px 30px;
       border-radius: 4px; }
       .tutor_details_header .tutor-profile .container .tutor-profile-view .tutor-profile-card .tutor-content .my_profile a span, .tutor_lesson_header .tutor-profile .container .tutor-profile-view .tutor-profile-card .tutor-content .my_profile a span {
@@ -2523,6 +2647,7 @@ TUTOR PROFILE PAGE
       font-family: "Roboto", sans-serif;
       border-radius: 10px;
       border: none;
+      cursor: pointer;
       width: 260px;
       padding: 10px 0;
       margin-bottom: 15px;
@@ -2924,6 +3049,7 @@ REVIEW
           font-family: "Roboto", sans-serif;
           border-radius: 10px;
           border: none;
+          cursor: pointer;
           padding: 0.9em 1.2em;
           cursor: pointer; }
       .review_section .leave_review .container .review__wrapper .star-widget {
@@ -2988,6 +3114,7 @@ REVIEW
             font-family: "Roboto", sans-serif;
             border-radius: 10px;
             border: none;
+            cursor: pointer;
             padding: 0.5em 1.4em;
             border-radius: 0.5em;
             cursor: pointer; }
@@ -3070,6 +3197,7 @@ REVIEW
         font-family: "Roboto", sans-serif;
         border-radius: 10px;
         border: none;
+        cursor: pointer;
         padding: 15px 35px; }
       .become_tutor .container .row .rigth .decription-btns .faq, .become_tutor .container .row .rigth .decription-btns .faq-page {
         font-size: 0.95rem; }
@@ -3114,6 +3242,7 @@ REVIEW
       font-family: "Roboto", sans-serif;
       border-radius: 10px;
       border: none;
+      cursor: pointer;
       height: 35px;
       width: 140px;
       line-height: 35px; }
@@ -3124,6 +3253,7 @@ REVIEW
       font-family: "Roboto", sans-serif;
       border-radius: 10px;
       border: none;
+      cursor: pointer;
       height: 35px;
       width: 140px;
       line-height: 35px;
@@ -3250,7 +3380,8 @@ REVIEW
       font-size: 0.95rem;
       font-family: "Roboto", sans-serif;
       border-radius: 10px;
-      border: none; }
+      border: none;
+      cursor: pointer; }
     .become_tutor .container .row .rigth .decription-btns .faq, .become_tutor .container .row .rigth .decription-btns .faq-page {
       font-size: 0.9rem;
       margin-top: 15px; }
@@ -3413,6 +3544,7 @@ REVIEW
         font-family: "Roboto", sans-serif;
         border-radius: 10px;
         border: none;
+        cursor: pointer;
         border-radius: 0px;
         height: none;
         border-bottom-right-radius: 8px;
@@ -3439,6 +3571,7 @@ REVIEW
       font-family: "Roboto", sans-serif;
       border-radius: 10px;
       border: none;
+      cursor: pointer;
       padding: 15px 40px;
       display: inline-block;
       margin-right: 20px; }
@@ -3502,6 +3635,7 @@ REVIEW
       font-family: "Roboto", sans-serif;
       border-radius: 10px;
       border: none;
+      cursor: pointer;
       padding: 15px 40px;
       display: inline-block;
       margin-right: 20px; }
@@ -3779,6 +3913,15 @@ REVIEW
         height: 40vh;
         padding: 20px 30px;
         transition-delay: 0.4s; }
+      nav .container .login {
+        margin-left: 30px;
+        position: absolute;
+        right: 80px;
+        top: 50%;
+        transform: translateY(-50%); }
+        nav .container .login img {
+          width: 25px;
+          height: 25px; }
       nav .container .toggle-bar {
         width: 20px;
         height: 20px;
@@ -3833,6 +3976,7 @@ REVIEW
           font-family: "Roboto", sans-serif;
           border-radius: 10px;
           border: none;
+          cursor: pointer;
           margin-top: 10px; }
         .become_tutor .container .row .rigth .becom_tutor_stats .decription-btns .faq, .become_tutor .container .row .rigth .becom_tutor_stats .decription-btns .faq-page {
           font-size: 0.9rem;
@@ -3860,6 +4004,7 @@ REVIEW
           font-family: "Roboto", sans-serif;
           border-radius: 10px;
           border: none;
+          cursor: pointer;
           margin-top: 10px; }
         .become_tutor .container .row .rigth .becom_tutor_stats .decription-btns .faq, .become_tutor .container .row .rigth .becom_tutor_stats .decription-btns .faq-page {
           font-size: 0.9rem;
@@ -4157,6 +4302,7 @@ REVIEW
       font-family: "Roboto", sans-serif;
       border-radius: 10px;
       border: none;
+      cursor: pointer;
       padding: 0.9em 1.2em;
       cursor: pointer; }
   .review_section .leave_review .container .review__wrapper .star-widget {
@@ -4234,6 +4380,7 @@ REVIEW
       font-family: "Roboto", sans-serif;
       border-radius: 10px;
       border: none;
+      cursor: pointer;
       padding: 15px 40px;
       display: inline-block;
       margin-right: 20px;
@@ -4300,6 +4447,7 @@ REVIEW
       font-family: "Roboto", sans-serif;
       border-radius: 10px;
       border: none;
+      cursor: pointer;
       padding: 15px 40px;
       display: inline-block;
       margin-right: 20px; }
@@ -4800,6 +4948,7 @@ REVIEW
           font-family: "Roboto", sans-serif;
           border-radius: 10px;
           border: none;
+          cursor: pointer;
           height: 50px;
           font-size: 0.8rem;
           border-top-right-radius: 8px;
@@ -4824,6 +4973,7 @@ REVIEW
           font-family: "Roboto", sans-serif;
           border-radius: 10px;
           border: none;
+          cursor: pointer;
           padding: 15px 30px;
           border-radius: 6px;
           margin-right: 0px;
