--- a/css/style.css
+++ b/css/style.css
@@ -380,12 +380,14 @@ nav {
       padding: 20px 30px; }
     nav .container .login {
       position: relative;
-      margin-left: 30px; }
+      margin-left: 30px;
+      z-index: 120; }
       nav .container .login .login_icon {
         cursor: pointer; }
         nav .container .login .login_icon svg {
           width: 25px;
-          height: 25px; }
+          height: 25px;
+          pointer-events: none; }
           nav .container .login .login_icon svg path {
             transition: 0.4s ease-in-out; }
         nav .container .login .login_icon:hover svg path {
@@ -396,7 +398,7 @@ nav {
         width: 300px;
         right: -18px;
         top: 30px;
-        z-index: 121;
+        z-index: 300;
         opacity: 0; }
         nav .container .login .login-drop .login_wrapper {
           background-color: #ffff;
