--- a/scss/navigation.scss
+++ b/scss/navigation.scss
@@ -68,12 +68,14 @@ nav {
 		.login {
 			position: relative;
 			margin-left: 30px;
+			z-index: 120;
 			.login_icon {
 				cursor: pointer;
 
 				svg {
 					width: 25px;
 					height: 25px;
+					pointer-events: none;
 					path {
 						transition: $transition;
 					}
@@ -93,7 +95,7 @@ nav {
 				width: 300px;
 				right: -18px;
 				top: 30px;
-				z-index: 121;
+				z-index: 300;
 				opacity: 0;
 
 				.login_wrapper {
