--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1411,6 +1411,16 @@ TUTOR PROFILE PAGE
 				border-radius: 6px;
 			}
 		}
+		.flag-form {
+			.it-flag-form {
+				button.add {
+					margin-top: 2.5px;
+					width: 23px;
+					height: 23px;
+					border: 2px solid rgba(90, 109, 115, 0.5);
+				}
+			}
+		}
 	}
 }
 // MY MESSAGES
